--- a/packages/dashboard-frontend/src/components/ResourceIcon/index.module.css
+++ b/packages/dashboard-frontend/src/components/ResourceIcon/index.module.css
@@ -12,7 +12,6 @@
 
 .icon {
   display: inline-block;
-  flex-shrink: 0;
 
   min-width: 18px;
   margin-right: 4px;
@@ -20,10 +19,10 @@
 
   font-size: 14px;
   line-height: 16px;
-  color: var(--pf-t--global--color--nonstatus--gray--100);
+  color: var(--pf-t--global--text--color--nonstatus--on-blue--default);
   text-align: center;
   white-space: nowrap;
 
-  background-color: var(--pf-t--global--color--nonstatus--blue--300);
+  background-color: var(--pf-t--global--color--nonstatus--blue--default);
   border-radius: 20px;
 }
